// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectInspector - getters & setters renders getters and setters as expected 1`] = `
"
▼ root
|    x: Getter & Setter
|  ▶︎ <get x()>: function x()
|  ▶︎ <set x()>: function x()
"
`;

exports[`ObjectInspector - getters & setters renders getters as expected 1`] = `
"
▼ root
|    x: Getter
|  ▶︎ <get x()>: function x()
"
`;

exports[`ObjectInspector - getters & setters renders setters as expected 1`] = `
"
▼ root
|    x: Setter
|  ▶︎ <set x()>: function x()
"
`;
